--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-server.port=8080
+spring.datasource.url=jdbc:postgresql://ep-patient-union-930974.us-east-2.aws.neon.tech/neondb
+spring.datasource.username=hbahramian
+spring.datasource.password=xnT7GQDVjN8E
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
